src/test/resources/example/cocos/valid/validParameterDeclarationName.ocl
/* (c) https://github.com/MontiCore/monticore */
import example.CDs.DefaultTypes.*;
import example.CDs.AuctionCD.*;

ocl validParameterDeclarationName {
  context boolean Person.changeCompany(String name)
  let 
    Company oldCo = company;
    Collection<Company> newCos = {co from Company | co.name == name};
    Company newCo = any newCos
  pre: oldCo.name != name && newCos.size == 1;
  post: newCo.employees == newCo.employees@pre + 1 && oldCo.employees == oldCo.employees@pre - 1;
}
