src/test/resources/example/cocos/invalid/invalidParameterDeclarationName.ocl
import example.CDs.DefaultTypes.*;
import example.CDs.AuctionCD.*;

ocl invalidParameterDeclarationName {
  context boolean Person.changeCompany(String Name)
  let 
    Company oldCo = company;
    Company newCos = {co in Company | co.name == name};
    newCo = any newCos;
  pre Test: oldCo.name != name && newCos.size == 1;
  post Test: newCo.employees == newCo.employees@pre + 1 && oldCo.employees == oldCo.employees@pre - 1;
}